Fixed gap in service description

--- a/app/our-services/[slug]/service.module.css
+++ b/app/our-services/[slug]/service.module.css
@@ -1,7 +1,7 @@
 .row {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 40px;
     background-color: #ffffff;
 }
 
